--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,5 @@
-absl-py==2.1.0
-attrs==25.1.0
-blinker==1.9.0
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-colorama==0.4.6
-comtypes==1.4.10
-contourpy==1.3.1
-cycler==0.12.1
-Flask==3.1.0
-flatbuffers==25.2.10
-fonttools==4.56.0
-gTTS==2.5.4
-idna==3.10
-itsdangerous==2.2.0
-jax==0.5.1
-jaxlib==0.5.1
-Jinja2==3.1.5
-kiwisolver==1.4.8
-MarkupSafe==3.0.2
-matplotlib==3.10.1
-mediapipe==0.10.21
-ml_dtypes==0.5.1
-numpy==1.26.4
-opencv-contrib-python==4.11.0.86
-opencv-python==4.11.0.86
-opencv-python-headless==4.11.0.86
-opt_einsum==3.4.0
-packaging==24.2
-pillow==11.1.0
-protobuf==4.25.6
-pycparser==2.22
-pyparsing==3.2.1
-pypiwin32==223
-python-dateutil==2.9.0.post0
-pyttsx3==2.98
-pywin32==308
-requests==2.32.3
-scipy==1.15.2
-sentencepiece==0.2.0
-six==1.17.0
-sounddevice==0.5.1
-urllib3==2.3.0
-Werkzeug==3.1.3
+flask==2.2.3
+opencv-python==4.7.0.72
+mediapipe==0.10.0
+gtts==2.3.1
+pillow==9.5.0
