--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,101 @@
-absl-py==2.1.0
+accelerate==1.4.0
+aiohappyeyeballs==2.5.0
+aiohttp==3.11.13
+aiosignal==1.3.2
+asttokens==3.0.0
 attrs==25.1.0
-blinker==1.9.0
 certifi==2025.1.31
-cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
-comtypes==1.4.10
+coloredlogs==15.0.1
+comm==0.2.2
 contourpy==1.3.1
 cycler==0.12.1
-Flask==3.1.0
+datasets==3.3.2
+debugpy==1.8.13
+decorator==5.2.1
+dill==0.3.8
+emoji==1.7.0
+executing==2.2.0
+filelock==3.13.1
 flatbuffers==25.2.10
 fonttools==4.56.0
-gTTS==2.5.4
+frozenlist==1.5.0
+fsspec==2024.6.1
+huggingface-hub==0.29.2
+humanfriendly==10.0
 idna==3.10
-itsdangerous==2.2.0
-jax==0.5.1
-jaxlib==0.5.1
-Jinja2==3.1.5
+ipykernel==6.29.5
+ipython==9.0.2
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+Jinja2==3.1.4
+joblib==1.4.2
+jupyter_client==8.6.3
+jupyter_core==5.7.2
 kiwisolver==1.4.8
-MarkupSafe==3.0.2
+MarkupSafe==2.1.5
 matplotlib==3.10.1
-mediapipe==0.10.21
-ml_dtypes==0.5.1
-numpy==1.26.4
-opencv-contrib-python==4.11.0.86
-opencv-python==4.11.0.86
-opencv-python-headless==4.11.0.86
-opt_einsum==3.4.0
+matplotlib-inline==0.1.7
+mpmath==1.3.0
+multidict==6.1.0
+multiprocess==0.70.16
+nest-asyncio==1.6.0
+networkx==3.3
+nltk==3.9.1
+numpy==2.1.2
+onnx==1.17.0
+onnxruntime==1.21.0
+onnxruntime-tools==1.7.0
 packaging==24.2
-pillow==11.1.0
-protobuf==4.25.6
-pycparser==2.22
+pandas==2.2.3
+parso==0.8.4
+pillow==11.0.0
+platformdirs==4.3.6
+prompt_toolkit==3.0.50
+propcache==0.3.0
+protobuf==6.30.0
+psutil==7.0.0
+pure_eval==0.2.3
+py-cpuinfo==9.0.0
+py3nvml==0.2.7
+py_vncorenlp==0.1.4
+pyarrow==19.0.1
+Pygments==2.19.1
+pyjnius==1.6.1
 pyparsing==3.2.1
-pypiwin32==223
+pyreadline3==3.5.4
+python-crfsuite==0.9.11
 python-dateutil==2.9.0.post0
-pyttsx3==2.98
+pytz==2025.1
 pywin32==308
+PyYAML==6.0.2
+pyzmq==26.2.1
+regex==2024.11.6
 requests==2.32.3
+safetensors==0.5.3
+scikit-learn==1.6.1
 scipy==1.15.2
-sentencepiece==0.2.0
+seaborn==0.13.2
 six==1.17.0
-sounddevice==0.5.1
+stack-data==0.6.3
+sympy==1.13.1
+threadpoolctl==3.5.0
+tokenizers==0.21.0
+torch==2.6.0+cu118
+torchaudio==2.6.0+cu118
+torchvision==0.21.0+cu118
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.49.0
+typing_extensions==4.12.2
+tzdata==2025.1
+underthesea==6.8.4
+underthesea_core==1.0.4
 urllib3==2.3.0
-Werkzeug==3.1.3
+wcwidth==0.2.13
+xmltodict==0.14.2
+xxhash==3.5.0
+yarl==1.18.3
